# lungevaty

./: .gitignore  README.md  dcm_inference.py  install.sh  pyproject.toml  sample_dicom_manifest.json  test.py  train.py
configs/: dcm_inference.yaml  survival.yaml  test.yaml
docs/: index.html
tools/: checkpointing.py  logging_helpers.py  loop_conditions.py  masker.py  wnb.py
vital/: config.py  defined_transformations.py  eva.py  lungevity.py  metrics.py  sampler.py  timm_eva.py  transformations.py  vit.py
