[project]
name = "lungevaty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.21.0",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "lifelines>=0.30.0",
    "lungmask>=0.2.20",
    "matplotlib>=3.10.1",
    "monai[all]>=1.4.0",
    "openpyxl>=3.1.5",
    "pip>=26.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "simpleitk>=2.5.0",
    "timm==1.0.16",
    "torch==2.7.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb[media]>=0.19.8",
]
